# claw-eval-harness-workflow

./: .gitignore  FAIR_CLAWEVAL_HARNESS_NOTES_20260706.md  FORMAL_RUN_TIMEOUT_AND_FAIRNESS_FIX_20260708.md  PACKAGE_README.md  README.md  README_PACKAGE.md  REFACTOR_NOTES_20260703.md  SMOKE_SELECTION_20260703.txt  TESTED.md  pyproject.toml
configs/: claw_eval_deepseek_judge.yaml  nanobot_deepseek_v4_pro.json  nanobot_deepseek_v4_pro.yaml  project.yaml  stage1_vllm.yaml  stage1_vllm_chat.yaml  stage1_vllm_proxy.yaml  stage2_sparse_vllm.yaml
configs/benchmarks/: openclaw_claw_eval.yaml  openclaw_claw_eval_stage2_smoke.yaml  openclaw_sample.yaml  swe_lite.yaml  swe_verified.yaml
configs/codex/: config.toml.template
configs/harnesses/: codex.yaml  nanobot.yaml  openclaw.yaml
docs/: ARCHITECTURE.md  CLAW_LIVE_BRIDGE.md  GIT_WORKFLOW.md  OBSERVABILITY.md  STAGE2_SPARSEVLLM_NOTES.md  TIME_ESTIMATE.md
examples/: smoke_openclaw_local.sh
external_patches/: README.md
judge_results/: README.md  external_grade_results.jsonl
schemas/: run_manifest.schema.json
scripts/: run_stage1_smoke.sh  start_stage1_vllm.sh
tests/: test_claw_live_bridge.py  test_claw_model_tool_proxy.py  test_codex_native_claw_tools.py  test_external_cli_native_claw_tools.py  test_harness_eval_refactor.py  test_openclaw_tool_policy.py  test_patch_validation.py  test_responses_to_chat_bridge.py  test_stage1_tool_parser_config.py  test_swebench_eval_wrapper.py  test_timeout_policy.py  test_tool_policy_audit.py  test_tool_policy_model_proxy_history.py  test_trace_conversion.py
tools/: README.md
(+331 files in other folders)
